tests/models/struct/named/u8/fail/default.rs
use dade::model;
#[model]
struct TestModel {
    #[field(default = 2.0)]
    value: u8,
}
fn main() {}
